final fixes for research tab and fixing horizontal scroll

--- a/research.css
+++ b/research.css
@@ -7,6 +7,9 @@
     max-width: 800px;
     font-family: 'Montserrat', sans-serif;
 }
+body{
+    overflow: hidden;
+}
 
 h1 {
     font-weight: 250;
@@ -66,7 +69,7 @@ a.navbar:hover {
     float: left;
     height: 12em;
     border-radius: 3px;
-    margin: 0em 3em 0em 3em;
+    margin: 0 3em 0 3em;
 }
 
 .contact-info {
@@ -76,7 +79,7 @@ a.navbar:hover {
 
 .navbar {
     list-style-type: none;
-    padding: 0px 0px 0px 0px;
+    padding: 0 0 0 0;
     font-family: sans-serif;
     /*width: 100%;*/
 }
@@ -90,15 +93,15 @@ a.navbar:hover {
 .navitem {
     float: left;
     display: block;
-    margin: 0px 1em 0px 0px;
-    padding: 0px 0px 0px 0px;
+    margin: 0 1em 0 0;
+    padding: 0 0 0 0;
 }
 
 .modeswitch {
     float: right;
     display: block;
-    margin: 0px 1em 0px 0px;
-    padding: 0px 0px 0px 0px;
+    margin: 0 1em 0 0;
+    padding: 0 0 0 0;
 }
 
 .imhere a {
@@ -107,25 +110,25 @@ a.navbar:hover {
 
 .cvlist {
     list-style-type: none;
-    padding: 0em 1em 0em 1em;
+    padding: 0 1em 0 1em;
 }
 
 .cvitem {
-    margin: 0em 0em 1em 0em;
+    margin: 0 0 1em 0;
 }
 
 .cvitem-title {
     font-weight: bold;
-    margin: 0px 0px 3px 0px;
+    margin: 0 0 3px 0;
 }
 
 .authorlist {
-    margin: 0px 0px 3px 0px;
+    margin: 0 0 3px 0;
 }
 
 .venue {
     font-style: italic;
-    margin: 0px 0px 3px 0px;
+    margin: 0 0 3px 0;
 }
 
 .links {
@@ -165,7 +168,7 @@ footer {
 /* For Research Presentation*/
 
 #platter > .image {
-    border: 1.5px solid #000000;
+    border: 2px solid #000000;
     width: 50vmin;
     height: 66vmin;
     object-fit: cover;
@@ -203,8 +206,8 @@ body:hover> #mouseshadow
     border-radius: 20px;
 
     position: fixed;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     z-index: 10000;
 
     pointer-events: none;
